--- a/build.gradle
+++ b/build.gradle
@@ -18,13 +18,25 @@ repositories {
 	mavenCentral()
 }
 
+ext {
+	sprngdocOpenApiVersion = '1.6.6'
+	mapstructVersion = '1.5.2.Final'
+	validationVersion = '2.0.1.Final'
+
+}
+
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation "org.springframework.boot:spring-boot-starter-validation"
+	implementation "org.springdoc:springdoc-openapi-ui:${sprngdocOpenApiVersion}"
+	implementation "org.mapstruct:mapstruct:${mapstructVersion}"
+	implementation "javax.validation:validation-api:${validationVersion}"
 	implementation 'org.liquibase:liquibase-core'
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'com.h2database:h2'
 	annotationProcessor 'org.projectlombok:lombok'
+	annotationProcessor "org.mapstruct:mapstruct-processor:${mapstructVersion}"
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
